feat: add redux- persistent, saga, thunk

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.1",
+    "redux-thunk": "^2.4.1",
+    "reselect": "^4.1.6",
     "sass": "^1.55.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
