--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^18.8.1",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/redux-logger": "^3.0.9",
     "@types/styled-components": "^5.1.26",
     "dotenv": "^16.0.3",
     "firebase": "^9.10.0",
@@ -29,6 +30,7 @@
     "sass": "^1.55.0",
     "stripe": "^10.12.0",
     "styled-components": "^5.3.6",
+    "typed-redux-saga": "^1.5.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
@@ -57,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-macros": "^3.1.0",
     "redux-devtools-extension": "^2.13.9"
   }
 }
